# albert

./: .gitmodules  CMakeLists.txt  Makefile  disttool
include/albert/: extension.h
lib/globalshortcut/: CMakeLists.txt
lib/globalshortcut/src/: hotkeymanager_mac.cpp
src/app/: extensionmanager.cpp  main.cpp
src/app/settingswidget/: grabkeybutton.cpp  grabkeybutton.h  settingswidget.cpp  settingswidget.h
src/lib/: query.cpp
